--- a/.github/workflows/dev-infrastructure.yml
+++ b/.github/workflows/dev-infrastructure.yml
@@ -40,6 +40,7 @@ jobs:
       ansible_changed: ${{ steps.changes.outputs.ansible }}
       media_stack_changed: ${{ steps.changes.outputs.media_stack }}
       network_vm_changed: ${{ steps.changes.outputs.network_vm }}
+      infra_lxc_changed: ${{ steps.changes.outputs.infra_lxc }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -51,11 +52,13 @@ jobs:
             echo "ansible=true" >> $GITHUB_OUTPUT
             echo "media_stack=true" >> $GITHUB_OUTPUT
             echo "network_vm=true" >> $GITHUB_OUTPUT
+            echo "infra_lxc=true" >> $GITHUB_OUTPUT
           else
             echo "terraform=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} 2>/dev/null | grep -E '^terraform/dev/' | wc -l > /dev/null && echo true || echo false)" >> $GITHUB_OUTPUT
             echo "ansible=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} 2>/dev/null | grep -E '^ansible/dev/' | wc -l > /dev/null && echo true || echo false)" >> $GITHUB_OUTPUT
             echo "media_stack=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} 2>/dev/null | grep -E '^(terraform/dev/media-stack|ansible/dev/media-stack)' | wc -l > /dev/null && echo true || echo false)" >> $GITHUB_OUTPUT
             echo "network_vm=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} 2>/dev/null | grep -E '^(terraform/dev/network-vm|ansible/dev/network-vm)' | wc -l > /dev/null && echo true || echo false)" >> $GITHUB_OUTPUT
+            echo "infra_lxc=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} 2>/dev/null | grep -E '^(terraform/dev/infra-lxc|ansible/dev/infra-lxc)' | wc -l > /dev/null && echo true || echo false)" >> $GITHUB_OUTPUT
           fi
 
 
@@ -207,6 +210,102 @@ jobs:
           ./scripts/run-terraform.sh -chdir terraform/dev/network-vm apply -auto-approve tfplan
 
       - name: Print Terraform Debug Log (network-vm apply)
+        if: failure()
+        run: |
+          echo '--- Terraform Debug Log ---'
+          cat /tmp/terraform.log || echo 'No log found.'
+
+  terraform-infra-lxc:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.infra_lxc_changed == 'true'
+    runs-on: self-hosted
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Ensure SSH key exists in Vault (containerized)
+        env:
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+          VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
+        run: |
+          cd /app/infra-platform
+          docker run --rm \
+            -e VAULT_ADDR="$VAULT_ADDR" \
+            -e VAULT_TOKEN="$VAULT_TOKEN" \
+            -v "$PWD:/app/infra-platform" \
+            -w /app/infra-platform \
+            ubuntu:22.04 \
+            bash -c "\
+              apt-get update && \
+              apt-get install -y curl unzip openssh-client && \
+              curl -fsSL https://releases.hashicorp.com/vault/1.15.2/vault_1.15.2_linux_amd64.zip -o vault.zip && \
+              rm -f vault && \
+              unzip -o vault.zip && \
+              mv vault /usr/local/bin/ && \
+              chmod +x /usr/local/bin/vault && \
+              # Generate SSH key if it doesn't exist
+              if ! vault kv get -field=private secret/ssh_keys/infra-lxc_worker 2>/dev/null; then \
+                echo 'Generating new SSH keypair for infra-lxc...'; \
+                ssh-keygen -t ed25519 -f /tmp/infra-lxc_worker -N '' -C 'infra-lxc-worker' -q; \
+                PRIVATE_KEY=\$(cat /tmp/infra-lxc_worker); \
+                PUBLIC_KEY=\$(cat /tmp/infra-lxc_worker.pub); \
+                vault kv put secret/ssh_keys/infra-lxc_worker private=\"\$PRIVATE_KEY\" public=\"\$PUBLIC_KEY\"; \
+                echo 'SSH key created and stored in Vault.'; \
+              else \
+                echo 'SSH key already exists in Vault.'; \
+              fi \
+            "
+
+      - name: Terraform Init
+        env:
+          TF_VAR_proxmox_api_url: ${{ secrets.PVE_API }}
+          TF_VAR_proxmox_user: ${{ secrets.PVE_USER }}
+          TF_VAR_proxmox_password: ${{ secrets.PVE_PASS }}
+          TF_VAR_vault_token: ${{ secrets.VAULT_TOKEN }}
+          TF_VAR_vault_address: ${{ secrets.VAULT_ADDR }}
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+          TF_LOG: DEBUG
+          TF_LOG_PATH: /tmp/terraform.log
+        run: |
+          cd /app/infra-platform
+          ./scripts/run-terraform.sh -chdir terraform/dev/infra-lxc init
+
+      - name: Terraform Plan
+        env:
+          TF_VAR_proxmox_api_url: ${{ secrets.PVE_API }}
+          TF_VAR_proxmox_user: ${{ secrets.PVE_USER }}
+          TF_VAR_proxmox_password: ${{ secrets.PVE_PASS }}
+          TF_VAR_vault_token: ${{ secrets.VAULT_TOKEN }}
+          TF_VAR_vault_address: ${{ secrets.VAULT_ADDR }}
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+          TF_LOG: DEBUG
+          TF_LOG_PATH: /tmp/terraform.log
+        run: |
+          cd /app/infra-platform
+          ./scripts/run-terraform.sh -chdir terraform/dev/infra-lxc plan -out=tfplan
+
+      - name: Print Terraform Debug Log (infra-lxc)
+        if: failure()
+        run: |
+          echo '--- Terraform Debug Log ---'
+          cat /tmp/terraform.log || echo 'No log found.'
+
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/dev' && (github.event.inputs.terraform_action == 'apply' || github.event.inputs.terraform_action == '')
+        env:
+          TF_VAR_proxmox_api_url: ${{ secrets.PVE_API }}
+          TF_VAR_proxmox_user: ${{ secrets.PVE_USER }}
+          TF_VAR_proxmox_password: ${{ secrets.PVE_PASS }}
+          TF_VAR_vault_token: ${{ secrets.VAULT_TOKEN }}
+          TF_VAR_vault_address: ${{ secrets.VAULT_ADDR }}
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+          TF_LOG: DEBUG
+          TF_LOG_PATH: /tmp/terraform.log
+        run: |
+          cd /app/infra-platform
+          ./scripts/run-terraform.sh -chdir terraform/dev/infra-lxc apply -auto-approve tfplan
+
+      - name: Print Terraform Debug Log (infra-lxc apply)
         if: failure()
         run: |
           echo '--- Terraform Debug Log ---'
@@ -365,8 +464,83 @@ jobs:
               ansible/dev/network-vm/network-vm_setup.yml
           fi
 
+  ansible-infra-lxc:
+    needs: [detect-changes, terraform-infra-lxc]
+    if: needs.detect-changes.outputs.infra_lxc_changed == 'true' && (github.event.inputs.ansible_action != 'skip' || github.event.inputs.ansible_action == '')
+    runs-on: self-hosted
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Rebuild Ansible image
+        run: |
+          cd /app/infra-platform
+          docker compose build --no-cache ansible
+
+      - name: Install Vault CLI
+        run: |
+          mkdir -p ~/.local/bin
+          curl -fsSL https://releases.hashicorp.com/vault/1.15.2/vault_1.15.2_linux_amd64.zip -o /tmp/vault.zip
+          unzip -o /tmp/vault.zip -d ~/.local/bin/
+          chmod +x ~/.local/bin/vault
+          rm /tmp/vault.zip
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Check Vault CLI version
+        run: vault --version
+
+      - name: Retrieve SSH key from Vault
+        env:
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+          VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
+        run: |
+          mkdir -p "$HOME/ssh"
+          rm -f "$HOME/ssh/infra-lxc_worker_id_ed25519"
+          vault kv get -field=private secret/ssh_keys/infra-lxc_worker > "$HOME/ssh/infra-lxc_worker_id_ed25519"
+          if [ ! -s "$HOME/ssh/infra-lxc_worker_id_ed25519" ]; then
+            echo "Error: SSH key file is empty or could not be retrieved"
+            exit 1
+          fi
+          chmod 600 "$HOME/ssh/infra-lxc_worker_id_ed25519"
+
+      - name: Debug SSH key file (infra-lxc)
+        run: |
+          head -5 "$HOME/ssh/infra-lxc_worker_id_ed25519"
+          file "$HOME/ssh/infra-lxc_worker_id_ed25519"
+          ls -l "$HOME/ssh/infra-lxc_worker_id_ed25519"
+
+      - name: Fix line endings in SSH key (infra-lxc)
+        run: |
+          sed -i 's/\r$//' "$HOME/ssh/infra-lxc_worker_id_ed25519"
+
+      - name: Ensure Ansible dependencies are available
+        run: |
+          cd /app/infra-platform
+          ./scripts/run-ansible.sh galaxy collection install community.general community.hashi_vault
+
+      - name: Run Ansible playbook via container
+        env:
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+          VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
+        run: |
+          cd /app/infra-platform
+          if [ "${{ github.event.inputs.ansible_action }}" = "check" ]; then
+            ./scripts/run-ansible.sh playbook \
+              -i ansible/dev/infra-lxc/inventory.ini \
+              --check \
+              -v \
+              --private-key /root/ssh/infra-lxc_worker_id_ed25519 \
+              ansible/dev/infra-lxc/infra-lxc_setup.yml
+          else
+            ./scripts/run-ansible.sh playbook \
+              -i ansible/dev/infra-lxc/inventory.ini \
+              -v \
+              --private-key /root/ssh/infra-lxc_worker_id_ed25519 \
+              ansible/dev/infra-lxc/infra-lxc_setup.yml
+          fi
+
   summary:
-    needs: [detect-changes, terraform-media-stack, terraform-network-vm, ansible-media-stack, ansible-network-vm]
+    needs: [detect-changes, terraform-media-stack, terraform-network-vm, terraform-infra-lxc, ansible-media-stack, ansible-network-vm, ansible-infra-lxc]
     if: always()
     runs-on: self-hosted
     steps:
@@ -379,12 +553,15 @@ jobs:
           echo "- Ansible changes: ${{ needs.detect-changes.outputs.ansible_changed }}" >> $GITHUB_STEP_SUMMARY
           echo "- Media Stack changes: ${{ needs.detect-changes.outputs.media_stack_changed }}" >> $GITHUB_STEP_SUMMARY
           echo "- Network VM changes: ${{ needs.detect-changes.outputs.network_vm_changed }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Infra LXC changes: ${{ needs.detect-changes.outputs.infra_lxc_changed }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 🏗️ Job Results:" >> $GITHUB_STEP_SUMMARY
           echo "- Terraform Media Stack: ${{ needs.terraform-media-stack.result }}" >> $GITHUB_STEP_SUMMARY
           echo "- Terraform Network VM: ${{ needs.terraform-network-vm.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Terraform Infra LXC: ${{ needs.terraform-infra-lxc.result }}" >> $GITHUB_STEP_SUMMARY
           echo "- Ansible Media Stack: ${{ needs.ansible-media-stack.result }}" >> $GITHUB_STEP_SUMMARY
           echo "- Ansible Network VM: ${{ needs.ansible-network-vm.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Ansible Infra LXC: ${{ needs.ansible-infra-lxc.result }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 🎯 Next Steps:" >> $GITHUB_STEP_SUMMARY
           echo "- Review the job outputs above" >> $GITHUB_STEP_SUMMARY
