feat: support dynamic destroy for all infra components\n\n- Add infra-lxc as destroyable target\n- Add 'all' option to destroy all components\n- Fix job structure and summary output

--- a/.github/workflows/dev-infrastructure-destroy.yml
+++ b/.github/workflows/dev-infrastructure-destroy.yml
@@ -6,19 +6,20 @@ on:
       destroy_target:
         description: 'What to destroy'
         required: true
-        default: 'both'
+        default: 'all'
         type: choice
         options:
+          - all
           - media-stack
           - network-vm
-          - both
+          - infra-lxc
 
 env:
   TF_VERSION: 1.6.4
 
 jobs:
   destroy-media-stack:
-    if: github.event.inputs.destroy_target == 'media-stack' || github.event.inputs.destroy_target == 'both'
+    if: github.event.inputs.destroy_target == 'media-stack' || github.event.inputs.destroy_target == 'all'
     runs-on: self-hosted
     steps:
       - name: Checkout code
@@ -51,7 +52,7 @@ jobs:
           ./scripts/run-terraform.sh -chdir terraform/dev/media-stack destroy -auto-approve
 
   destroy-network-vm:
-    if: github.event.inputs.destroy_target == 'network-vm' || github.event.inputs.destroy_target == 'both'
+    if: github.event.inputs.destroy_target == 'network-vm' || github.event.inputs.destroy_target == 'all'
     runs-on: self-hosted
     steps:
       - name: Checkout code
@@ -85,8 +86,41 @@ jobs:
           cd /app/infra-platform
           ./scripts/run-terraform.sh -chdir terraform/dev/network-vm destroy -auto-approve
 
+  destroy-infra-lxc:
+    if: github.event.inputs.destroy_target == 'infra-lxc' || github.event.inputs.destroy_target == 'all'
+    runs-on: self-hosted
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Terraform Init
+        env:
+          TF_VAR_proxmox_api_url: ${{ secrets.PVE_API }}
+          TF_VAR_proxmox_user: ${{ secrets.PVE_USER }}
+          TF_VAR_proxmox_password: ${{ secrets.PVE_PASS }}
+          TF_VAR_vault_token: ${{ secrets.VAULT_TOKEN }}
+          TF_VAR_vault_address: ${{ secrets.VAULT_ADDR }}
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+          VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
+        run: |
+          cd /app/infra-platform
+          ./scripts/run-terraform.sh -chdir terraform/dev/infra-lxc init
+
+      - name: Terraform Destroy
+        env:
+          TF_VAR_proxmox_api_url: ${{ secrets.PVE_API }}
+          TF_VAR_proxmox_user: ${{ secrets.PVE_USER }}
+          TF_VAR_proxmox_password: ${{ secrets.PVE_PASS }}
+          TF_VAR_vault_token: ${{ secrets.VAULT_TOKEN }}
+          TF_VAR_vault_address: ${{ secrets.VAULT_ADDR }}
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+          VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
+        run: |
+          cd /app/infra-platform
+          ./scripts/run-terraform.sh -chdir terraform/dev/infra-lxc destroy -auto-approve
+
   summary:
-    needs: [destroy-media-stack, destroy-network-vm]
+    needs: [destroy-media-stack, destroy-network-vm, destroy-infra-lxc]
     if: always()
     runs-on: self-hosted
     steps:
@@ -99,5 +133,6 @@ jobs:
           echo "### 🏗️ Job Results:" >> $GITHUB_STEP_SUMMARY
           echo "- Destroy Media Stack: ${{ needs.destroy-media-stack.result }}" >> $GITHUB_STEP_SUMMARY
           echo "- Destroy Network VM: ${{ needs.destroy-network-vm.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Destroy Infra LXC: ${{ needs.destroy-infra-lxc.result }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "⚠️ **Infrastructure has been destroyed for testing purposes**" >> $GITHUB_STEP_SUMMARY
