--- a/.github/workflows/dev-infrastructure.yml
+++ b/.github/workflows/dev-infrastructure.yml
@@ -356,15 +356,26 @@ jobs:
 
       - name: Install Vault CLI
         run: |
+          echo "Checking disk space..."
+          df -h /tmp
           mkdir -p ~/.local/bin
-          curl -fsSL https://releases.hashicorp.com/vault/1.15.2/vault_1.15.2_linux_amd64.zip -o /tmp/vault.zip
+          echo "Downloading Vault CLI..."
+          curl -fSL --max-time 60 --retry 3 https://releases.hashicorp.com/vault/1.15.2/vault_1.15.2_linux_amd64.zip -o /tmp/vault.zip
+          if [ ! -f /tmp/vault.zip ]; then
+            echo "Error: vault.zip was not created"
+            exit 1
+          fi
+          echo "Extracting Vault CLI..."
           unzip -o /tmp/vault.zip -d ~/.local/bin/
           chmod +x ~/.local/bin/vault
-          rm /tmp/vault.zip
+          rm -f /tmp/vault.zip
           echo "$HOME/.local/bin" >> $GITHUB_PATH
+          echo "Vault CLI installed successfully"
 
       - name: Check Vault CLI version
-        run: vault --version
+        run: |
+          vault --version
+          which vault
 
       - name: Retrieve SSH key from Vault
         env:
@@ -428,15 +439,26 @@ jobs:
 
       - name: Install Vault CLI
         run: |
+          echo "Checking disk space..."
+          df -h /tmp
           mkdir -p ~/.local/bin
-          curl -fsSL https://releases.hashicorp.com/vault/1.15.2/vault_1.15.2_linux_amd64.zip -o /tmp/vault.zip
+          echo "Downloading Vault CLI..."
+          curl -fSL --max-time 60 --retry 3 https://releases.hashicorp.com/vault/1.15.2/vault_1.15.2_linux_amd64.zip -o /tmp/vault.zip
+          if [ ! -f /tmp/vault.zip ]; then
+            echo "Error: vault.zip was not created"
+            exit 1
+          fi
+          echo "Extracting Vault CLI..."
           unzip -o /tmp/vault.zip -d ~/.local/bin/
           chmod +x ~/.local/bin/vault
-          rm /tmp/vault.zip
+          rm -f /tmp/vault.zip
           echo "$HOME/.local/bin" >> $GITHUB_PATH
+          echo "Vault CLI installed successfully"
 
       - name: Check Vault CLI version
-        run: vault --version
+        run: |
+          vault --version
+          which vault
 
       - name: Retrieve SSH key from Vault
         env:
@@ -504,15 +526,26 @@ jobs:
 
       - name: Install Vault CLI
         run: |
+          echo "Checking disk space..."
+          df -h /tmp
           mkdir -p ~/.local/bin
-          curl -fsSL https://releases.hashicorp.com/vault/1.15.2/vault_1.15.2_linux_amd64.zip -o /tmp/vault.zip
+          echo "Downloading Vault CLI..."
+          curl -fSL --max-time 60 --retry 3 https://releases.hashicorp.com/vault/1.15.2/vault_1.15.2_linux_amd64.zip -o /tmp/vault.zip
+          if [ ! -f /tmp/vault.zip ]; then
+            echo "Error: vault.zip was not created"
+            exit 1
+          fi
+          echo "Extracting Vault CLI..."
           unzip -o /tmp/vault.zip -d ~/.local/bin/
           chmod +x ~/.local/bin/vault
-          rm /tmp/vault.zip
+          rm -f /tmp/vault.zip
           echo "$HOME/.local/bin" >> $GITHUB_PATH
+          echo "Vault CLI installed successfully"
 
       - name: Check Vault CLI version
-        run: vault --version
+        run: |
+          vault --version
+          which vault
 
       - name: Retrieve SSH key from Vault
         env:
