fix: update all IPs to match new VMID assignments
- media-stack: 192.168.50.200 → 192.168.50.211
- infra-lxc: 192.168.50.210 → 192.168.50.221
- network-vm: 192.168.50.220 → 192.168.50.251

Updated in:
- terraform/dev/*/main.tf (network IPs)
- ansible/dev/*/inventory.ini
- inventory.yml, inventory_network_vm.yml
- terraform/examples/lxc-infra/main.tf
- docs/LOCAL_SETUP.md
- .github/workflows/media-stack_pipeline.yml

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ vault.zip
 terraform/dev/media-stack/tfplan
 terraform/dev/network-vm/terraform-plugin-proxmox.log
 terraform/dev/network-vm/tfplan
+.terraform.lock.hcl
+tfplan
+*.zip*
