fix: SSH key line ending issues with Docker entrypoint auto-fix
- Add entrypoint.sh to automatically fix CRLF line endings in SSH keys
- Update Dockerfile to use the entrypoint script
- Add setup-ssh-keys.sh for retrieving and fixing keys from Vault
- Add diagnose-ssh-keys.sh for SSH key diagnostics and repair
- Add fix-ssh-keys.sh for quick line ending fixes
- Add comprehensive documentation:
  * QUICK_FIX_SSH_KEYS.md - Quick reference guide
  * SSH_KEY_SOLUTION_INDEX.md - Master documentation index
  * docs/SSH_KEY_TROUBLESHOOTING.md - Troubleshooting guide
  * docs/SSH_KEY_FIX_SUMMARY.md - Detailed problem explanation
  * scripts/README.md - Updated scripts documentation

This resolves SSH key loading errors (error in libcrypto) that were
preventing Ansible playbooks from running in the Docker container.
The entrypoint automatically fixes Windows-style line endings (CRLF)
transparently on container startup.

--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -125,5 +125,12 @@ USER root
 # Ensure PATH is set for root user too
 ENV PATH="/opt/venv/bin:/usr/local/bin:/usr/bin:/bin:$PATH"
 
+# Copy entrypoint script
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+# Set entrypoint to fix SSH keys before running commands
+ENTRYPOINT ["/entrypoint.sh"]
+
 # Final verification as root
 RUN which node && node --version
