--- a/.github/workflows/dev-infrastructure.yml
+++ b/.github/workflows/dev-infrastructure.yml
@@ -347,7 +347,7 @@ jobs:
       - name: Build Ansible image
         run: |
           cd /app/infra-platform
-          docker compose build ansible
+          docker compose build --no-cache ansible
 
       - name: Ensure Ansible dependencies are available
         run: |
@@ -435,7 +435,7 @@ jobs:
       - name: Build Ansible image
         run: |
           cd /app/infra-platform
-          docker compose build ansible
+          docker compose build --no-cache ansible
 
       - name: Install Vault CLI
         run: |
@@ -522,7 +522,7 @@ jobs:
       - name: Build Ansible image
         run: |
           cd /app/infra-platform
-          docker compose build ansible
+          docker compose build --no-cache ansible
 
       - name: Install Vault CLI
         run: |
