fix: Decode base64-encoded SSH keys from Vault
- Add base64 decoding to workflow SSH key retrieval (vault kv get | base64 -d)
- Update entrypoint.sh to auto-detect and decode base64-encoded keys as fallback
- Ensures SSH keys are in proper PEM format before use
- Fixes 'SSH key appears to be invalid or corrupted' errors
- Applied to both dev-infrastructure.yml and dev-infrastructure-cached.yml workflows

--- a/.github/workflows/dev-infrastructure-cached.yml
+++ b/.github/workflows/dev-infrastructure-cached.yml
@@ -393,7 +393,7 @@ jobs:
         run: |
           mkdir -p "$HOME/ssh"
           rm -f "$HOME/ssh/media-stack_worker_id_ed25519"
-          vault kv get -field=private secret/ssh_keys/media-stack_worker > "$HOME/ssh/media-stack_worker_id_ed25519"
+          vault kv get -field=private secret/ssh_keys/media-stack_worker | base64 -d > "$HOME/ssh/media-stack_worker_id_ed25519"
           if [ ! -s "$HOME/ssh/media-stack_worker_id_ed25519" ]; then
             echo "Error: SSH key file is empty or could not be retrieved"
             exit 1
@@ -473,7 +473,7 @@ jobs:
         run: |
           mkdir -p "$HOME/ssh"
           rm -f "$HOME/ssh/network-vm_worker_id_ed25519"
-          vault kv get -field=private secret/ssh_keys/network-vm_worker > "$HOME/ssh/network-vm_worker_id_ed25519"
+          vault kv get -field=private secret/ssh_keys/network-vm_worker | base64 -d > "$HOME/ssh/network-vm_worker_id_ed25519"
           if [ ! -s "$HOME/ssh/network-vm_worker_id_ed25519" ]; then
             echo "Error: SSH key file is empty or could not be retrieved"
             exit 1
@@ -557,7 +557,7 @@ jobs:
         run: |
           mkdir -p "$HOME/ssh"
           rm -f "$HOME/ssh/infra-lxc_worker_id_ed25519"
-          vault kv get -field=private secret/ssh_keys/infra-lxc_worker > "$HOME/ssh/infra-lxc_worker_id_ed25519"
+          vault kv get -field=private secret/ssh_keys/infra-lxc_worker | base64 -d > "$HOME/ssh/infra-lxc_worker_id_ed25519"
           if [ ! -s "$HOME/ssh/infra-lxc_worker_id_ed25519" ]; then
             echo "Error: SSH key file is empty or could not be retrieved"
             exit 1
