--- a/ansible/dev/network-vm/common/tasks/main.yml
+++ b/ansible/dev/network-vm/common/tasks/main.yml
@@ -10,10 +10,29 @@
       - curl
       - wget
       - git
+      - ssh
       - python3
       - python3-pip
       - software-properties-common
+      - docker.io
+      - docker-compose
+      - ca-certificates
+      - gnupg
+      - lsb-release
     state: present
+
+- name: Ensure Docker service is running and enabled
+  systemd:
+    name: docker
+    enabled: yes
+    state: started
+
+- name: Install Docker Compose v2
+  shell: |
+    curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+    chmod +x /usr/local/bin/docker-compose
+  args:
+    creates: /usr/local/bin/docker-compose
 
 - name: Ensure timezone is set
   timezone:
