fix terraform vars

--- a/.github/workflows/network-vm_pipeline.yml
+++ b/.github/workflows/network-vm_pipeline.yml
@@ -26,6 +26,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Generate SSH key in Vault
+        env:
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+          VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
+        run: |
+          cd /app/infra-platform
+          bash scripts/vault-generate-network-vm-key.sh "$VAULT_ADDR" "$VAULT_TOKEN"
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
