--- a/.github/workflows/test-vm-deployment.yml
+++ b/.github/workflows/test-vm-deployment.yml
@@ -6,12 +6,10 @@ on:
     paths:
       - 'terraform/dev/vm-test/**'
       - '.github/workflows/test-vm-deployment.yml'
-  pull_request:
-    branches: [dev]
   workflow_dispatch:
     inputs:
-      terraform_action:
-        description: 'Terraform action'
+      action:
+        description: 'Action'
         required: false
         default: 'plan'
         type: choice
@@ -24,26 +22,17 @@ env:
   TF_VERSION: 1.6.4
 
 jobs:
-  test-vm-deploy:
+  deploy:
     runs-on: ubuntu-latest
-    name: Deploy Test VM
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+      - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: ${{ env.TF_VERSION }}
 
-      - name: Terraform Format Check
-        run: terraform fmt -check -recursive
-        working-directory: terraform
-
-      - name: Terraform Init
-        run: |
-          cd terraform/dev/vm-test
-          terraform init
+      - name: Init
+        run: terraform -chdir=terraform/dev/vm-test init
         env:
           TF_VAR_pve_api: ${{ secrets.PVE_API }}
           TF_VAR_pve_user: ${{ secrets.PVE_USER }}
@@ -51,10 +40,8 @@ jobs:
           TF_VAR_vault_address: ${{ secrets.VAULT_ADDR }}
           TF_VAR_vault_token: ${{ secrets.VAULT_TOKEN }}
 
-      - name: Terraform Plan
-        run: |
-          cd terraform/dev/vm-test
-          terraform plan -out=tfplan
+      - name: Plan
+        run: terraform -chdir=terraform/dev/vm-test plan -out=tfplan
         env:
           TF_VAR_pve_api: ${{ secrets.PVE_API }}
           TF_VAR_pve_user: ${{ secrets.PVE_USER }}
@@ -62,13 +49,9 @@ jobs:
           TF_VAR_vault_address: ${{ secrets.VAULT_ADDR }}
           TF_VAR_vault_token: ${{ secrets.VAULT_TOKEN }}
 
-      - name: Terraform Apply
-        if: |
-          github.event_name == 'push' ||
-          (github.event_name == 'workflow_dispatch' && github.event.inputs.terraform_action == 'apply')
-        run: |
-          cd terraform/dev/vm-test
-          terraform apply -auto-approve tfplan
+      - name: Apply
+        if: github.event_name == 'push'
+        run: terraform -chdir=terraform/dev/vm-test apply -auto-approve tfplan
         env:
           TF_VAR_pve_api: ${{ secrets.PVE_API }}
           TF_VAR_pve_user: ${{ secrets.PVE_USER }}
@@ -76,11 +59,9 @@ jobs:
           TF_VAR_vault_address: ${{ secrets.VAULT_ADDR }}
           TF_VAR_vault_token: ${{ secrets.VAULT_TOKEN }}
 
-      - name: Terraform Destroy
-        if: github.event_name == 'workflow_dispatch' && github.event.inputs.terraform_action == 'destroy'
-        run: |
-          cd terraform/dev/vm-test
-          terraform destroy -auto-approve
+      - name: Destroy
+        if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'destroy'
+        run: terraform -chdir=terraform/dev/vm-test destroy -auto-approve
         env:
           TF_VAR_pve_api: ${{ secrets.PVE_API }}
           TF_VAR_pve_user: ${{ secrets.PVE_USER }}
