--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: terraform-runner
     restart: unless-stopped
     working_dir: /workspace
+    user: "${UID}:${GID}"
     volumes:
       - .:/workspace
       - ~/.ssh:/root/.ssh:ro
